dist/1.0/bin/sample/retrieveUnpackaged/objects/Autonumber__c.object
<CustomObject>
    <description>Object responsible for custom Autonumbers, which will not have a sequence gaps (standard ones can have them)</description>
    <fields>
        <fullName>Last_Number__c</fullName>
        <description>Stores the autonumber value, which were lately used</description>
        <inlineHelpText>Stores the autonumber value, which were lately used</inlineHelpText>
        <label>Last Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <description>Optiona fiield for storing transaction context id (i.e. Prov. Task Id). Helpful during debugging.</description>
        <inlineHelpText>Technical field. Optional value for storing transaction context id (i.e. Prov. Task Id). Helpful during debugging.</inlineHelpText>
        <label>Transaction Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Autonumber type. Specifies the independent autonumber sequence.</description>
        <inlineHelpText>Technical field. Specifies the independent autonumber sequence.</inlineHelpText>
        <label>Type</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Autonumber</label>
    <nameField>
        <label>Autonumber Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Autonumbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>